<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friend_referral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.friend_referral.FriendReferralActivity">



    <TextView
        style="@style/TextStyleBold"
        android:id="@+id/textUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/EditText"
        android:id="@+id/inputCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUser"
        android:hint="@string/cpf"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />
    <EditText
        style="@style/EditText"
        android:id="@+id/inputTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCPF"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />
    <EditText
        style="@style/EditText"
        android:id="@+id/inputTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextEmail"
        android:hint="@string/name_user"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />
    <EditText
        style="@style/EditText"
        android:id="@+id/inputTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextName"
        android:hint="@string/phone_user"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />

    <TextView
        style="@style/TextStyleBold"
        android:id="@+id/textUserFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_friend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextPhone"
        android:layout_marginTop="25dp"/>

    <EditText
        style="@style/EditText"
        android:id="@+id/inputTextFriendName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUserFriend"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />

    <EditText
        style="@style/EditText"
        android:id="@+id/inputTextPhoneFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextFriendName"
        android:hint="@string/phone"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />
    <EditText
        style="@style/EditText"
        android:id="@+id/inputTextEmailFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextPhoneFriend"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextEmailFriend"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>